# voice-memo-summarizer

./: .gitignore  README.md  pyproject.toml
.agents/skills/voice-memo-summarizer/: SKILL.md
.github/workflows/: ci.yml
src/voice_memo_summarizer/: __main__.py  clipboard.py  craft.py  summarizer.py
tests/: test_cli_integration.py  test_clipboard.py  test_craft.py  test_main.py  test_summarizer.py
tests/data/: google-adk-is-nice.m4a
